Fix text alignment on the order summary.

--- a/css/checkout-steps-rtl-304-beta-1.css
+++ b/css/checkout-steps-rtl-304-beta-1.css
@@ -1819,9 +1819,12 @@ div.woocommerce .fc-wrapper #order_review table.woocommerce-checkout-review-orde
 div.woocommerce .fc-wrapper #order_review table.woocommerce-checkout-review-order-table tfoot td {
   width: 50%;
   font-size: 15px;
-  text-align: left !important;
   line-height: 1;
   vertical-align: middle;
+}
+
+div.woocommerce .fc-wrapper #order_review table.woocommerce-checkout-review-order-table > tfoot > tr > td {
+  text-align: left !important;
 }
 
 div.woocommerce .fc-wrapper #order_review table.woocommerce-checkout-review-order-table .product-total .tax_label,
